service/Resources: actually save mimetype

RegisterMimeType returns early if the mimetype provided is not empty.
This means that for adding resource activity through the dbus interface
of kactivitymanagerd, the resource is registered, but the mimetype is
not set. (The recentlyused.xbel and LibreOffice spies directly send a
signal that causes the database to save them and do not go through
RegisterMimeType, so it works there, or at least for recentlyused.xbel;
I didn't test LibreOffice).

This causes several bugs and inconsistencies - PAStats has support
for filtering by mimetype category (files, directories, and any).
Dolphin and Kicker(dash) restrict their results to files (and in Dolphin
also directories), but kickoff does not, so Dolphin and Kicker only
contain recently used files that were added to recentlyused.xbel, not
all files. Kickoff includes all of them, but with empty mimetypes, which
still will result in files showing up with correct icons somehow, but
directories will show up with empty mimetypes and be labeled as a file,
not as a directory, and there may be duplicated entries (one with, one
without mimetype). It will also break the automated grouping, which uses
mimetypes; some mimetype-less folders will later be recognized as
folders through KFilePlacesModel, but after they are sorted so there may
end up being multiple Folders sections in a list that should be sorted
by that.

Instead, we only return early if no mimetype was set, which makes more
sense intuitively (why save it only when it's empty) and fixes all these
issues (except the duplicate sections in kickoff, which may not be
resolved immediately, but it should stop new ones from appearing, and
fix the existing ones as their mimetypes get added through regular use.

BUG: 496179
BUG: 501903
FIXED-IN: 6.6.0


(cherry picked from commit 1c7c90802be9c7e92f7329d930d0fbc1c1082d50)

Co-authored-by: Christoph Wolk <cwo.kde@posteo.net>